--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
 
                 <ul>
-                    <li ><a href="#" class="hvr-underline-from-left">Our Story</a></li>
-                    <li><a href="#" class="hvr-underline-from-left">Menu</a></li>
-                    <li><a href="#" class="hvr-underline-from-left">ORTO at Home</a></li>
-                    <li><a href="#" class="hvr-underline-from-left">Here&Now </a></li>
+                    <li ><a href="https://mihyunlee0110.github.io/orto_sub1" class="hvr-underline-from-left">Our Story</a></li>
+                    <li><a href="https://mihyunlee0110.github.io/orto_sub2" class="hvr-underline-from-left">Menu</a></li>
+                    <li><a href="https://mihyunlee0110.github.io/orto_sub3" class="hvr-underline-from-left">ORTO at Home</a></li>
+                    <li><a href="https://mihyunlee0110.github.io/orto_sub4" class="hvr-underline-from-left">Here&Now </a></li>
                     <li><a href="#" class="hvr-underline-from-left"><img src="images/icon_bag.png" alt="bag"></a></li>
                 </ul>
             </div> <!--nav_inner E-->
@@ -89,7 +89,7 @@
         <div class="home_inner">
 
             <h3>ORTO at Home</h3>
-            <p><a href="#"> 더보러가기></a></p>
+            <p><a href="https://mihyunlee0110.github.io/orto_sub3"> 더보러가기></a></p>
 
             <div class="swiper sb">
 
